Fix: fixed contact items so that there is space in between on firefox

--- a/css/style.scss
+++ b/css/style.scss
@@ -644,7 +644,7 @@ img {
 		align-items: center;
 
 		.contact-item {
-			margin: 5% auto 5% auto;
+			margin: 1em auto 1em auto;
 		}
 	}
 
@@ -735,7 +735,7 @@ img {
 		flex-direction: column;
 		align-items: center;
 		.contact-item {
-			margin: 5% auto 5% auto;
+			margin: 1em auto 1em auto;
 		}
 	}
 
